Fix type punning warning in HashTable.h debug builds https://bugs.webkit.org/show_bug.cgi?id=77422

Patch by Andy Wingo <wingo@igalia.com> on 2012-02-02
Reviewed by Gavin Barraclough.

* wtf/HashTable.h (WTF::HashTable::checkKey): Fix type punning
warning appearing in debug builds with gcc-4.6.2 on GNU/Linux.

Canonical link: https://commits.webkit.org/94518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106574 268f45cc-cd09-0410-ab3c-d52691b4dbfc